# rahasia

./: .gitignore  README.md  docker-compose.yml
backend/: .env.example  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 172f3206b5ab_create_users_table.py  48444444fac2_create_shares_table.py
backend/app/: main.py
backend/app/api/: routes_shares.py
backend/app/core/: auth.py  config.py  middleware.py  username.py
backend/app/db/: session.py
backend/app/models/: __init__.py  share.py  user.py
backend/app/schemas/: share.py
backend/app/services/: share_service.py
backend/tests/: conftest.py  test_shares_api.py
devlog/: MATERIAL_ALEMBIC.md  MATERIAL_AUTH_JWT_CLERK.md  MATERIAL_GUIDELINE.md  MATERIAL_PYDANTIC_VS_SQLALCHEMY.md  MATERIAL_SESSION_AND_YIELD.md  MATERIAL_SQLALCHEMY_MODEL.md  MATERIAL_WEB_CRYPTO.md  PHASE-2-PLAN.md  PHASE-2-PRD.md  PHASE-2-STEP-01.md  PHASE-2-STEP-02.md  PHASE-2-STEP-03.md  PHASE-2-STEP-04.md  PHASE-2-STEP-05.md  PLAN.md  PRD.md  STEP-01.md  STEP-02.md  STEP-03.md  STEP-04.md  STEP-05.md  STEP-06.md  STEP-07.md  STEP-08.md  STEP-09.md  STEP-10.md  STEP-11.md  STEP-11A-PRETTIER.md  STEP-12.md  STEP-13.md  STEP-14.md  STEP-15.md  STEP-16.md  STEP_GUIDELINE.md
docs/public/: DEPLOYMENT.md  DEVELOPMENT_WORKFLOW.md  DEVELOPMENT_WORKFLOW_id.md  LOCAL_SETUP.md  PHASE_2_CONFIG.md
frontend/: .env.example  package-lock.json  package.json  vite.config.ts
frontend/src/: index.css  main.tsx
frontend/src/app/: router.tsx
frontend/src/components/: AppShell.tsx  ShareForm.test.tsx  ShareForm.tsx  ShareResult.tsx
(+9 files in other folders)
