[project]
name = "backend"
version = "0.1.0"
description = "FastAPI backend for the Rahasia encrypted sharing app"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.136.0",
    "pydantic-settings>=2.13.1",
    "uvicorn[standard]>=0.44.0",
]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pytest>=9.0.3",
    "ruff>=0.15.11",
]
